--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,16 @@ services:
     volumes:
       - redis_data:/data
 
+  postgres:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: auth
+    ports:
+      - "5440:5432"
+
 volumes:
   mongodb_data:
   redis_data:
